--- a/components/ibgateway/jts.ini
+++ b/components/ibgateway/jts.ini
@@ -7,6 +7,7 @@ RemotePortOrderRouting=4000
 LocalServerPort=4000
 ApiOnly=true
 MainWindow.Width=700
+installDir=/root/Jts/
 
 [Logon]
 useRemoteSettings=false
